src/test/ui/issues/issue-1XXXX/issue-18937.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/issue-18937.rs:20:31
   |
LL | /     fn foo<F>(&mut self, f: F)
LL | |         where F: fmt::Debug + 'a,
LL | |               Self: Sized;
   | |__________________________- definition of `foo` from trait
...
LL |           where F: fmt::Debug + 'static,
   |                                 ^^^^^^^ impl has extra requirement `F: 'static`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0276`.
